[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[pycodestyle]
count = True
ignore = E226,E302,E41
max-line-length = 120
statistics = True

[pylint.FORMAT]
max-line-length = 120

[pylint.DESIGN]
max-args = 8
max-public-methods=30
max-locals=20
max-statements=75
max-branches=20
max-attributes=40

